k8s/digital-twin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digital-twin-service
  namespace: meta-web-three
  labels:
    app: digital-twin-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: actuator
  selector:
    app: digital-twin-service
---
apiVersion: v1
kind: Service
metadata:
  name: digital-twin-service-lb
  namespace: meta-web-three
  labels:
    app: digital-twin-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: digital-twin-service
